--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/contact.css">
-  <script src="javascript/input.js" defer></script>
-  <script defer src="javascript/animation.js"></script>
+  <link rel="stylesheet" href="contact.css">
+  <script src="input.js" defer></script>
+  <script defer src="animation.js"></script>
   <title>Contact</title>
 </head>
 <body>
