--- a/legal.html
+++ b/legal.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
-  <link rel="stylesheet" href="css/legal.css">
-  <script defer src="javascript/animation.js"></script>
+  <link rel="stylesheet" href="legal.css">
+  <script defer src="animation.js"></script>
 </head>
 <body>
 
