--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="about.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script defer src="javascript/animation.js"></script>
+  <script defer src="animation.js"></script>
 
 </head>
 <body>
