--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
 <main>
 
     <section class="about-images">
-        <img src="imgs/palette.png" alt="Colour palette" class="animated-img_img1">
-        <img src="imgs/cigs.png" alt="Pack of cigarettes" class="animated-img_img2">
-        <img src="imgs/polaroid.png" alt="Polaroid camera" class="animated-img_img3">
+        <img src="palette.png" alt="Colour palette" class="animated-img_img1">
+        <img src="cigs.png" alt="Pack of cigarettes" class="animated-img_img2">
+        <img src="polaroid.png" alt="Polaroid camera" class="animated-img_img3">
     </section>
     
     
@@ -91,7 +91,7 @@
 
         <!-- Image Card -->
         <div class="about-card image-card">
-            <img src="imgs/portrait.png" alt="Portrait of Vanja">
+            <img src="portrait.png" alt="Portrait of Vanja">
         </div>
 
         <!-- Fun Facts Card -->
