--- a/contact.html
+++ b/contact.html
@@ -1,144 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/contact.css">
-  <script src="javascript/input.js" defer></script>
-  <script defer src="javascript/animation.js"></script>
-  <title>Contact</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/contact.css"/>
+    <script src="assets/js/input.js" defer></script>
+    <script defer src="assets/js/animation.js"></script>
+    <title>Contact</title>
 </head>
 <body>
-
 <!-- Navbar -->
 <nav class="navbar" aria-label="Main Navigation">
-  <a href="index.html" class="logo">
-    <svg id="logo-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="50" height="50">
-      <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="Helvetica, Arial, sans-serif" font-size="50" fill="#fff">
-        <tspan id="letter-V">V</tspan>
-        <tspan id="letter-D">D</tspan>
-      </text>
-    </svg>
-  </a>
-  <ul>
-    <li><a href="index.html" class="nav-link">Work</a></li>
-    <li><a href="about.html" class="nav-link">About</a></li>
-    <li><a href="contact.html" class="nav-link">Contact</a></li>
-  </ul>
+    <a href="index.html" class="logo">
+        <svg
+                id="logo-svg"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 200 200"
+                width="50"
+                height="50"
+        >
+            <text
+                    x="50%"
+                    y="50%"
+                    dominant-baseline="middle"
+                    text-anchor="middle"
+                    font-family="Helvetica, Arial, sans-serif"
+                    font-size="50"
+                    fill="#fff"
+            >
+                <tspan id="letter-V">V</tspan>
+                <tspan id="letter-D">D</tspan>
+            </text>
+        </svg>
+    </a>
+    <ul>
+        <li><a href="index.html" class="nav-link">Work</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+    </ul>
 </nav>
 
 <!-- Header Section -->
 <section class="header">
-  <div class="title">
-    <h1>Get in Touch</h1>
-    <p>Whether you have a project idea, a collaboration request, or just want to say hi, feel free to reach out! I'll get back to you asap.</p>
-  </div>
+    <div class="title">
+        <h1>Get in Touch</h1>
+        <p>
+            Whether you have a project idea, a collaboration request, or just want
+            to say hi, feel free to reach out! I'll get back to you asap.
+        </p>
+    </div>
 </section>
 
 <!-- Enquiry Section -->
 <main>
-  <section class="form">
-    <form action="#" method="POST">
-      <div class="form-row half">
-        <div class="item">
-          <label for="last_name">Last Name</label>
-          <input type="text" id="last_name" name="last_name" autocomplete="family-name" required>
-        </div>
-        <div class="item">
-          <label for="first_name">First Name</label>
-          <input type="text" id="first_name" name="first_name" autocomplete="given-name" required>
-        </div>
-      </div>
-      <div class="form-row half">
-        <div class="item">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" autocomplete="email" required>
-        </div>
-        <div class="item">
-          <label for="address">Address</label>
-          <input type="text" id="address" name="address" autocomplete="street-address">
-        </div>
-      </div>
-      <div class="form-row full">
-        <label for="plz_ort">Street and Postal Code</label>
-        <input type="text" id="plz_ort" name="plz_ort" autocomplete="postal-code">
-      </div>
-      <div class="form-row full">
-        <label for="message">Message</label>
-        <textarea id="message" name="message" required></textarea>
-      </div>
-      <div class="action">
-        <input type="submit" value="Send" aria-label="Send Message">
-        <input type="reset" value="Reset" aria-label="Clear Form">
-      </div>
-    </form>
-  </section>
+    <section class="form">
+        <form action="#" method="POST">
+            <div class="form-row half">
+                <div class="item">
+                    <label for="last_name">Last Name</label>
+                    <input
+                            type="text"
+                            id="last_name"
+                            name="last_name"
+                            autocomplete="family-name"
+                            required
+                    />
+                </div>
+                <div class="item">
+                    <label for="first_name">First Name</label>
+                    <input
+                            type="text"
+                            id="first_name"
+                            name="first_name"
+                            autocomplete="given-name"
+                            required
+                    />
+                </div>
+            </div>
+            <div class="form-row half">
+                <div class="item">
+                    <label for="email">Email</label>
+                    <input
+                            type="email"
+                            id="email"
+                            name="email"
+                            autocomplete="email"
+                            required
+                    />
+                </div>
+                <div class="item">
+                    <label for="address">Address</label>
+                    <input
+                            type="text"
+                            id="address"
+                            name="address"
+                            autocomplete="street-address"
+                    />
+                </div>
+            </div>
+            <div class="form-row full">
+                <label for="plz_ort">Street and Postal Code</label>
+                <input
+                        type="text"
+                        id="plz_ort"
+                        name="plz_ort"
+                        autocomplete="postal-code"
+                />
+            </div>
+            <div class="form-row full">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <div class="action">
+                <input type="submit" value="Send" aria-label="Send Message"/>
+                <input type="reset" value="Reset" aria-label="Clear Form"/>
+            </div>
+        </form>
+    </section>
 
-  <!-- FAQ Section -->
-  <section class="faq" aria-label="faq-heading">
-    <h2 id="faq-heading">Before You Message Me...</h2>
-    <details>
-      <summary>Do you take freelance projects?</summary>
-      <p>Yes! I'm open to freelance work. Let me know what you're looking for!</p>
-    </details>
-    <details>
-      <summary>How fast do you respond?</summary>
-      <p>I typically reply within 24-48 hours, depending on workload.</p>
-    </details>
-    <details>
-      <summary>Can I see more of your work?</summary>
-      <p>Sure! Check out my <a href="index.html">portfolio</a> for more.</p>
-    </details>
-  </section>
+    <!-- FAQ Section -->
+    <section class="faq" aria-label="faq-heading">
+        <h2 id="faq-heading">Before You Message Me...</h2>
+        <details>
+            <summary>Do you take freelance projects?</summary>
+            <p>
+                Yes! I'm open to freelance work. Let me know what you're looking
+                for!
+            </p>
+        </details>
+        <details>
+            <summary>How fast do you respond?</summary>
+            <p>I typically reply within 24-48 hours, depending on workload.</p>
+        </details>
+        <details>
+            <summary>Can I see more of your work?</summary>
+            <p>Sure! Check out my <a href="index.html">portfolio</a> for more.</p>
+        </details>
+    </section>
 
-  <!-- Collapsible Impressum Section -->
-  <section class="impressum" aria-label="impressum-heading">
-    <details>
-      <summary>Impressum</summary>
-      <p><span>Website Owner:</span> Vanja Dunkel</p>
-      <p><span>Address:</span> Strasse. Nr, 8050 Zürich</p>
-      <p><span>Email:</span> vanja.dunkel@gmail.com</p>
-      <p>This website complies with the Swiss Federal Act on Data Protection (revDSG) and, where applicable, the EU GDPR.</p>
-    </details>
-  </section>
+    <!-- Collapsible Impressum Section -->
+    <section class="impressum" aria-label="impressum-heading">
+        <details>
+            <summary>Impressum</summary>
+            <p><span>Website Owner:</span> Vanja Dunkel</p>
+            <p><span>Address:</span> Strasse. Nr, 8050 Zürich</p>
+            <p><span>Email:</span> vanja.dunkel@gmail.com</p>
+            <p>
+                This website complies with the Swiss Federal Act on Data Protection
+                (revDSG) and, where applicable, the EU GDPR.
+            </p>
+        </details>
+    </section>
 </main>
 
-<!-- Footer -->
+<!--Footer-->
 <footer>
-  <div class="footer-container">
-      <div class="footer-section">
-          <h3>Pages</h3>
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="legal.html">Legal</a></li>
-          </ul>
-      </div>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>Pages</h3>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="legal.html">Legal</a></li>
+            </ul>
+        </div>
 
-      <div class="footer-section">
-          <h3>Selected Work</h3>
-          <ul>
-              <li><a href="#">Project One</a></li>
-              <li><a href="#">Project Two</a></li>
-              <li><a href="#">Project Three</a></li>
-          </ul>
-      </div>
+        <div class="footer-section">
+            <h3>Selected Work</h3>
+            <ul>
+                <li><a href="#">Project One</a></li>
+                <li><a href="#">Project Two</a></li>
+                <li><a href="#">Project Three</a></li>
+            </ul>
+        </div>
 
-      <div class="footer-section">
-          <h3>Let's Connect</h3>
-          <ul>
-              <li><a href="https://www.linkedin.com/in/vanja-dunkel-498b07221/">Linkedin</a></li>
-              <li><a href="mailto:vanja.dunkel@gmail.com">Email</a></li>
-          </ul>
-      </div>
+        <div class="footer-section">
+            <h3>Let's Connect</h3>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/vanja-dunkel-498b07221/"
+                    >Linkedin</a
+                    >
+                </li>
+                <li><a href="mailto:vanja.dunkel@gmail.com">Email</a></li>
+            </ul>
+        </div>
 
-      <div class="footer-bottom">
-        <p>© 2025 Vanja Dunkel. All Rights Reserved.</p>
-        <small>Made with &hearts; and matcha latte.</small>
+        <div class="footer-bottom">
+            <p>© 2025 Vanja Dunkel. All Rights Reserved.</p>
+            <small>Made with &hearts; and matcha latte.</small>
+        </div>
     </div>
-  </div>
 </footer>
-
 </body>
 </html>
