--- a/index.html
+++ b/index.html
@@ -1,103 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css"> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <script defer src="javascript/code.js"></script>
-  <script defer src="javascript/input.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script defer src="javascript/animation.js"></script>
-  <title>Portfolio</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Vanja's Portfolio</title>
+
+    <!-- Tailwind CDN + deine Farbpalette -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#000000',
+                        dark: '#333333',
+                        medium: '#555555',
+                        light: '#666666',
+                        border: '#cccccc',
+                        bgSoft: '#D1D1D1',
+                        accent: '#f0630c',
+                        grayish: '#c2bebe',
+                        placeholder: '#aaaaaa',
+                        white: '#ffffff',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body>
 
-<!-- Navbar -->
-<nav class="navbar" aria-label="Main Navigation">
-  <a href="index.html" class="logo">
-    <svg id="logo-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="50" height="50">
-      <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="Helvetica, Arial, sans-serif" font-size="50" fill="#fff">
-        <tspan id="letter-V">V</tspan>
-        <tspan id="letter-D">D</tspan>
-      </text>
-    </svg>
-  </a>
-  <ul>
-    <li><a href="index.html" class="nav-link">Work</a></li>
-    <li><a href="about.html" class="nav-link">About</a></li>
-    <li><a href="contact.html" class="nav-link">Contact</a></li>
-  </ul>
-</nav>
-
+<body class="bg-white text-primary font-sans">
 <!-- Header -->
-<header role="banner">
-  <div class="header-description">
-    <h1>Vanja Dunkel</h1>
-    <p>Building with purpose, designing with edge.</p>
-  </div>
+<header class="bg-white border-b border-border">
+    <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
+        <h1 class="text-2xl font-bold tracking-tight">Vanja</h1>
+        <nav class="space-x-6 text-medium text-sm">
+            <a href="index.html" class="text-accent underline">Home</a>
+            <a href="about.html" class="hover:text-accent">About</a>
+            <a href="contact.html" class="hover:text-accent">Contact</a>
+            <a href="legal.html" class="hover:text-accent">Legal</a>
+        </nav>
+    </div>
 </header>
 
-<div class="model">
-  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.66/build/spline-viewer.js"></script>
-  <spline-viewer url="https://prod.spline.design/kr5pzUI0YfSr7WzC/scene.splinecode"></spline-viewer>
-</div>
-
-<!-- Portfolio Section -->
-<main>
-  <section class="portfolio" aria-label="portfolio-heading">
-
-    <div class="portfolio-description-title">
-      <h2>My Work</h2>
+<!-- Hero / Intro -->
+<section class="bg-bgSoft py-16">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+        <h2 class="text-4xl font-extrabold mb-4 text-primary">Willkommen in meinem Portfolio</h2>
+        <p class="text-lg text-dark max-w-xl mx-auto">Ich bin Vanja – hier findest du meine Projekte, Designs und
+            Gedanken. Minimal, mutig und maßgeschneidert.</p>
     </div>
+</section>
 
-    <div class="portfolio-container" aria-live="polite"></div>
-
-    <!-- Slider Bar -->
-    <div class="slider-bar">
-      <div class="slider-indicator"></div>
+<!-- Projekte-Preview -->
+<section class="max-w-6xl mx-auto px-4 py-16">
+    <h3 class="text-2xl font-bold mb-8 text-primary">Aktuelle Projekte</h3>
+    <div class="grid gap-8 md:grid-cols-2">
+        <!-- Card 1 -->
+        <div class="bg-white border border-border p-6 rounded-lg shadow hover:shadow-md transition">
+            <img src="../assets/imgs/1.png" alt="Projektbild 1" class="rounded mb-4"/>
+            <h4 class="text-xl font-semibold mb-2 text-dark">Projektname</h4>
+            <p class="text-medium text-sm">Kurze Beschreibung zum Projekt. Hier kommt max. eine Zeile Text.</p>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white border border-border p-6 rounded-lg shadow hover:shadow-md transition">
+            <img src="../assets/imgs/2.png" alt="Projektbild 2" class="rounded mb-4"/>
+            <h4 class="text-xl font-semibold mb-2 text-dark">Projektname</h4>
+            <p class="text-medium text-sm">Kurze Beschreibung zum Projekt. Hier kommt max. eine Zeile Text.</p>
+        </div>
     </div>
-
-  </section>
-</main>
+</section>
 
 <!-- Footer -->
-<footer>
-  <div class="footer-container">
-      <div class="footer-section">
-          <h3>Pages</h3>
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="legal.html">Legal</a></li>
-          </ul>
-      </div>
-
-      <div class="footer-section">
-          <h3>Selected Work</h3>
-          <ul>
-              <li><a href="#">Project One</a></li>
-              <li><a href="#">Project Two</a></li>
-              <li><a href="#">Project Three</a></li>
-          </ul>
-      </div>
-
-      <div class="footer-section">
-          <h3>Let's Connect</h3>
-          <ul>
-              <li><a href="https://www.linkedin.com/in/vanja-dunkel-498b07221/">Linkedin</a></li>
-              <li><a href="mailto:vanja.dunkel@gmail.com">Email</a></li>
-          </ul>
-      </div>
-
-      <div class="footer-bottom">
-        <p>© 2025 Vanja Dunkel. All Rights Reserved.</p>
-        <small>Made with &hearts; and matcha latte.</small>
-    </div>
-  </div>
+<footer class="bg-bgSoft text-center text-xs text-light p-6 mt-8">
+    &copy; 2025 Vanja. Alle Rechte vorbehalten.
 </footer>
-
 </body>
 </html>
